--- a/index.html
+++ b/index.html
@@ -1,94 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+            rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="stylesheet" href="css/font-awesome.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="icon" href="images/favicon.png"/>
     <title>Free E-Book | Start Your Own Blog</title>
-  </head>
-  <body>
-    <!--Navigation-->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
-      <div class="container">
+</head>
+<body>
+<!--Navigation-->
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+    <div class="container">
         <a href="index.html" class="navbar-brand">
-          <img src="images/logo.png" alt="">
+            <img src="images/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ms-auto" >
-            <li class="nav-item">
-              <a href="index.html" class="nav-link fw-semibold">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="#details" class="nav-link fw-semibold">Details</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link btn btn-outline-light fw-semibold px-4 mx-4 ">Contact</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link fw-semibold">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#details" class="nav-link fw-semibold">Details</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link btn btn-outline-light fw-semibold px-4 mx-4 ">Contact</a>
+                </li>
+            </ul>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <!--Header-->
-    <header class="header">
-      <!--Hero-->
-      <div class="hero text-white pt-7">
+<!--Header-->
+<header class="header">
+    <!--Hero-->
+    <div class="hero text-white pt-7">
         <div class="container-xl">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="image-container mb-5 px-4">
-                <img src="images/header-ebook.png" alt="" class="img-fluid">
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5">
-                <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
-                <p class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto at beatae cumque delectus, deleniti dolores eius exercitationem hic impedit iste iure laudantium maiores minima molestias mollitia perferendis similique voluptatibus!
-                </p>
-
-                <!--Form-->
-                <div class="form-container tex-certer">
-                  <form action="">
-                    <div class="my-4">
-                      <input type="email" class="form-control form-control-lg rounded-5" placeholder="Email Address">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="image-container mb-5 px-4">
+                        <img src="images/header-ebook.png" alt="" class="img-fluid">
                     </div>
-                    <div class="d-grid">
-                      <button class="btn btn-primary btn-lg text-white">
-                        Free Download
-                      </button>
-                    </div>
-                  </form>
                 </div>
-              </div>
+                <div class="col-md-6">
+                    <div class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5">
+                        <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto at beatae
+                            cumque delectus, deleniti dolores eius exercitationem hic impedit iste iure laudantium
+                            maiores minima molestias mollitia perferendis similique voluptatibus!
+                        </p>
+
+                        <!--Form-->
+                        <div class="form-container tex-certer">
+                            <form action="">
+                                <div class="my-4">
+                                    <input type="email" class="form-control form-control-lg rounded-5"
+                                           placeholder="Email Address">
+                                </div>
+                                <div class="d-grid">
+                                    <button class="btn btn-primary btn-lg text-white">
+                                        Free Download
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-      <svg
-              class="frame-decoration"
-              data-name="Layer 2"
-              xmlns="http://www.w3.org/2000/svg"
-              preserveAspectRatio="none"
-              viewBox="0 0 1920 192.275"
-      >
+    </div>
+    <svg
+            class="frame-decoration"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            viewBox="0 0 1920 192.275"
+    >
         <defs>
-          <style>
-            .cls-1 {
-              fill: #f3f6f9;
-            }
-          </style>
+            <style>
+                .cls-1 {
+                    fill: #f3f6f9;
+                }
+            </style>
         </defs>
         <title>frame-decoration</title>
         <path
@@ -96,10 +99,52 @@
                 d="M0,158.755s63.9,52.163,179.472,50.736c121.494-1.5,185.839-49.738,305.984-49.733,109.21,0,181.491,51.733,300.537,50.233,123.941-1.562,225.214-50.126,390.43-50.374,123.821-.185,353.982,58.374,458.976,56.373,217.907-4.153,284.6-57.236,284.6-57.236V351.03H0V158.755Z"
                 transform="translate(0 -158.755)"
         />
-      </svg>
-    </header>
+    </svg>
+</header>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+<!--Icons-->
+<section class="icons bg-light pb-5">
+    <div class="container-xl">
+        <div class="row hstack g-4">
+            <div class="col-md-4 d-flex gap-4">
+                <i class="fas fa-user fa-3x text-primary"></i>
+                <div>
+                    <h5 class="fw-bold">
+                        Unlock Your Blogging Potential
+                    </h5>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+                        consequatur deserunt eius est hic ipsa nemo nesciunt odio, pariatur placeat possimus quaerat
+                        quasi quis reprehenderit temporibus vel! Fugiat, velit? </p>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex gap-4">
+                <i class="fas fa-dollar fa-3x text-primary"></i>
+                <div>
+                    <h5 class="fw-bold">
+                        Unlock Your Blogging Potential
+                    </h5>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+                        consequatur deserunt eius est hic ipsa nemo nesciunt odio, pariatur placeat possimus quaerat
+                        quasi quis reprehenderit temporibus vel! Fugiat, velit? </p>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex gap-4">
+                <i class="fas fa-user fa-3x text-primary"></i>
+                <div>
+                    <h5 class="fw-bold">
+                        Unlock Your Blogging Potential
+                    </h5>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+                        consequatur deserunt eius est hic ipsa nemo nesciunt odio, pariatur placeat possimus quaerat
+                        quasi quis reprehenderit temporibus vel! Fugiat, velit? </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
+</body>
 </html>
